CAY-3016 Get rid of RelationshipQuery